version/0.8/_sources/api/ansys/speos/core/source/SourceSurface.rst.txt






:class:`SourceSurface`
======================

.. toctree::
   :hidden:

    Flux</api/ansys/speos/core/source/SourceSurface.Flux>
    ExitanceConstant</api/ansys/speos/core/source/SourceSurface.ExitanceConstant>
    ExitanceVariable</api/ansys/speos/core/source/SourceSurface.ExitanceVariable>


.. py:class:: ansys.speos.core.source.SourceSurface(project, name, description = '', metadata = None, source_instance = None, default_parameters = None)

   Bases: :py:obj:`BaseSource`


   
   Type of Source : Surface.

   By default, a luminous flux and existence constant are chosen. With a monochromatic spectrum,
   and lambertian intensity (cos with N = 1).

   :Parameters:

       **speos_client** : :obj:`ansys.speos.core.kernel.client.SpeosClient`
           The Speos instance client.

       **name** : :class:`python:str`
           Name of the source feature.

       **surface** : :obj:`ansys.api.speos.source.v1.source_pb2.SourceTemplate.Surface`
           Surface source to complete.

       **surface_props** : :obj:`ansys.api.speos.scene.v2.scene_pb2.Scene.SourceInstance.SurfaceProperties`
           Surface source properties to complete.

       **default_parameters** : :obj:`Optional`\[    :obj:`ansys.speos.core.generic.parameters.SurfaceSourceParameters`] = :data:`python:None`
           If defined the values in the SourceSurface instance will be overwritten by the
           values of the data class.














   ..
       !! processed by numpydoc !!


.. py:currentmodule:: SourceSurface

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~set_flux_from_intensity_file`
            - Take flux from intensity file provided.
          * - :py:attr:`~set_exitance_constant`
            - Set existence constant.
          * - :py:attr:`~set_exitance_variable`
            - Set existence variable, taken from XMP map.
          * - :py:attr:`~set_spectrum_from_xmp_file`
            - Take spectrum from xmp file provided.
          * - :py:attr:`~commit`
            - Save feature: send the local data to the speos server database.
          * - :py:attr:`~reset`
            - Reset feature: override local data by the one from the speos server database.
          * - :py:attr:`~delete`
            - Delete feature: delete data from the speos server database.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~visual_data`
            - Property containing Surface source visualization data.
          * - :py:attr:`~flux`
            - Flux property of the Surface source.
          * - :py:attr:`~intensity`
            - Intensity property.
          * - :py:attr:`~spectrum`
            - Spectrum property of the Source.







Import detail
-------------

.. code-block:: python

    from ansys.speos.core.source import SourceSurface

Property detail
---------------

.. py:property:: visual_data
   :type: ansys.speos.core.generic.visualization_methods._VisualData


   
   Property containing Surface source visualization data.





   :Returns:

       :obj:`ansys.speos.core.generic.visualization_methods._VisualData`
           Instance of VisualData Class for pyvista.PolyData of feature rays, coordinate_systems.











   ..
       !! processed by numpydoc !!

.. py:property:: flux
   :type: SourceSurface


   
   Flux property of the Surface source.





   :Returns:

       :obj:`ansys.speos.core.source.SourceSurface.Flux`
           flux object of the source











   ..
       !! processed by numpydoc !!

.. py:property:: intensity
   :type: ansys.speos.core.intensity.Intensity


   
   Intensity property.





   :Returns:

       :obj:`ansys.speos.core.intensity.Intensity`
           Intensity.











   ..
       !! processed by numpydoc !!

.. py:property:: spectrum
   :type: ansys.speos.core.spectrum.Spectrum


   
   Spectrum property of the Source.





   :Returns:

       :obj:`ansys.speos.core.spectrum.Spectrum`
           Spectrum.











   ..
       !! processed by numpydoc !!




Method detail
-------------

.. py:method:: set_flux_from_intensity_file()

   
   Take flux from intensity file provided.





   :Returns:

       :obj:`ansys.speos.core.source.SourceSurface`
           Surface source.











   ..
       !! processed by numpydoc !!

.. py:method:: set_exitance_constant()

   
   Set existence constant.





   :Returns:

       :obj:`ansys.speos.core.source.SourceSurface.ExitanceConstant`
           ExitanceConstant of surface source.











   ..
       !! processed by numpydoc !!

.. py:method:: set_exitance_variable()

   
   Set existence variable, taken from XMP map.





   :Returns:

       :obj:`ansys.speos.core.source.SourceSurface.ExitanceVariable`
           ExitanceVariable of surface source.











   ..
       !! processed by numpydoc !!

.. py:method:: set_spectrum_from_xmp_file()

   
   Take spectrum from xmp file provided.





   :Returns:

       :obj:`ansys.speos.core.source.SourceSurface`
           Surface source.











   ..
       !! processed by numpydoc !!

.. py:method:: commit()

   
   Save feature: send the local data to the speos server database.





   :Returns:

       :obj:`ansys.speos.core.source.SourceSurface`
           Source feature.











   ..
       !! processed by numpydoc !!

.. py:method:: reset()

   
   Reset feature: override local data by the one from the speos server database.





   :Returns:

       :obj:`ansys.speos.core.source.SourceSurface`
           Source feature.











   ..
       !! processed by numpydoc !!

.. py:method:: delete()

   
   Delete feature: delete data from the speos server database.

   The local data are still available




   :Returns:

       :obj:`ansys.speos.core.source.SourceSurface`
           Source feature.











   ..
       !! processed by numpydoc !!






Classes
-------

.. autoapisummary::

    ansys.speos.core.source.SourceSurface.Flux
    ansys.speos.core.source.SourceSurface.ExitanceConstant
    ansys.speos.core.source.SourceSurface.ExitanceVariable




